--- a/config/templates/login.html
+++ b/config/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
-{% block content %}
 {% load widget_tweaks %}
+{% load socialaccount %}
+{% block content %}
+
 
 <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Вход</h1>
@@ -46,6 +48,12 @@
             <a href="{% url "users:user_create" %}" class="fw-bolder">зарегистрируйтесь</a>
         </div>
     </div>
+    <div class="social-login">
+  <a href="{% provider_login_url 'yandex' %}" class="social-btn yandex-btn">
+  <span class="icon"></span>
+  Войти через Яндекс
+</a>
+</div>
     <div class="container d-flex justify-content-center align-items-center wrapper mt-2">
         <a href="#" class="nav-link">Забыли пароль?</a>
     </div>
