--- a/config/templates/login.html
+++ b/config/templates/login.html
@@ -53,13 +53,27 @@
             <a href="{% url "users:user_create" %}" class="fw-bolder">зарегистрируйтесь</a>
         </div>
     </div>
-
-    <div class="social-login">
+    <script>
+        window.YaAuthSuggest.init(
+      {
+         client_id: 'c46f0c53093440c39f12eff95a9f2f93',
+         response_type: 'token',
+         redirect_uri: 'localhost:8000/suggest/token'
+      },
+      'localhost:8000'
+   )
+   .then(({
+      handler
+   }) => handler())
+   .then(data => console.log('Сообщение с токеном', data))
+   .catch(error => console.log('Обработка ошибки', error));
+    </script>
+    {% comment %} <div class="social-login">
   <a href="{% provider_login_url 'yandex' %}" class="social-btn yandex-btn">
   <span class="icon"></span>
   Войти через Яндекс
 </a>
-</div>
+</div> {% endcomment %}
     <div class="container d-flex justify-content-center align-items-center wrapper mt-2">
         <a href="#" class="nav-link">Забыли пароль?</a>
     </div>
